syntax = "proto3";
package users;

service User {
    rpc GetUser(UserRequest) returns (UserResponse);
}

message UserRequest {
    string user_id = 1;
}


message UserResponse {
    string user_id = 1;
    string username = 2;    
}
